--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
     <meta name="Author" content="">
     <meta name="Keywords" content="">
     <meta name="Description" content="">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.js"></script>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
+    <article>  
+    <div class="title">
+        <h1>UI UX Design</h1>
+      </div>
+    </article>
     <canvas id="pinkboard"></canvas>
     <script>
 
