--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <article>  
     <div class="title">
-        <h1>UI UX Design</h1>
+        <h1>TEXT DEMO</h1>
       </div>
     </article>
     <canvas id="pinkboard"></canvas>
