--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
     <meta name="Keywords" content="">
     <meta name="Description" content="">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.js"></script>
+    <script src="./js/app.js"></script>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <article>  
-    <div class="title">
-        <h1>TEXT DEMO</h1>
-      </div>
+    <div class="btn-left">
+        <button class="btn-default">Default</button>
+    </div>
+    <article>
+        <div class="title">
+            <h1>TEXT DEMO</h1>
+        </div>
     </article>
     <canvas id="pinkboard"></canvas>
     <script>
