--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="Author" content="">
     <meta name="Keywords" content="">
     <meta name="Description" content="">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.js"></script>
     <script src="./js/app.js"></script>
     <link rel="stylesheet" href="./css/style.css">
@@ -14,7 +15,9 @@
 
 <body>
     <div class="btn-left">
-        <button class="btn-default">Default</button>
+        <input type="text" class="form-control" placeholder="Nhập tên..." id="name" name="username">
+        <input type="button" value="OK" class="btn btn-primary btn-change-text"/>
+        <input type="button" value="Reset" class="btn btn-primary btn-reset"/>
     </div>
     <article>
         <div class="title">
