--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
         <input type="text" class="form-control" placeholder="Nhập tên..." id="name" name="username">
         <input type="button" value="OK" class="btn btn-primary btn-change-text"/>
         <input type="button" value="Reset" class="btn btn-primary btn-reset"/>
+        <input type="button" value="Remove Button" class="btn btn-primary btn-hide"/>
+        <input type="button" value="Remove Text" class="btn btn-primary btn-remove-text"/>
     </div>
     <article>
         <div class="title">
-            <h1>TEXT DEMO</h1>
+            <h1 class="text-change">TEXT DEMO</h1>
         </div>
     </article>
     <canvas id="pinkboard"></canvas>
