--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <input type="button" value="Reset" class="btn btn-primary btn-reset"/>
         <input type="button" value="Remove Button" class="btn btn-primary btn-hide"/>
         <input type="button" value="Remove Text" class="btn btn-primary btn-remove-text"/>
+        <input type="button" value="Black Background" class="btn btn-primary btn-bg-black"/>
     </div>
     <article>
         <div class="title">
